--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                         }
                 }
 
-            let nest = new NestedForms('users', 'myUserList', columns, customurls);
+			// constructor(model, elementID, columns, customurls = null, token)
+            let nest = new NestedForms('users', 'myUserList', columns, customurls, "mytoken");
 
         });
     </script>
